5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/3960/executions/1771_1577.log
== TEST (2019-05-24 15:40:06) 
-- CODE:
a = float(input("Aceleracao: "))
v0 = float(input("Velocidade inicial: "))
n = int(input("N: "))

vet = array(arange(n))
cont = 0

while(cont < vet[-1]):
	vet[cont] = ((a * vet[cont]**2)/2 + v0 * vet[cont]
	cont += 1
					 
print(vet)
-- ERROR:
File "XXXX", line 10
    cont += 1
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:40:29) 
-- CODE:
a = float(input("Aceleracao: "))
v0 = float(input("Velocidade inicial: "))
n = int(input("N: "))

vet = array(arange(n))
cont = 0

while(cont < vet[-1]):
	vet[cont] = ((a * vet[cont]**2)/2) + v0 * vet[cont]
	cont += 1
					 
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    vet = array(arange(n))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:40:59) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade inicial: "))
n = int(input("N: "))

vet = array(arange(n))
cont = 0

while(cont < vet[-1]):
	vet[cont] = ((a * vet[cont]**2)/2) + v0 * vet[cont]
	cont += 1
					 
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:41:23) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade inicial: "))
n = int(input("N: "))

vet = array(arange(n))
cont = 0

while(cont <= vet[-1]):
	vet[cont] = ((a * vet[cont]**2)/2) + v0 * vet[cont]
	cont += 1
					 
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:41:49) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade inicial: "))
n = int(input("N: "))

vet = array(arange(n))
cont = 0

while(cont < vet[-1]+1):
	vet[cont] = ((a * vet[cont]**2)/2) + v0 * vet[cont]
	cont += 1
					 
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:42:17) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade inicial: "))
n = int(input("N: "))

vet = array(arange(n))
cont = 0

while(cont < vet[-1]):
	vet[cont] = ((a * vet[cont]**2)/2) + v0 * vet[cont]
	cont += 1
					 
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:43:31) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade inicial: "))
n = int(input("N: "))

vet = array(float(arange(n)))
cont = 0

while(cont < vet[-1]):
	vet[cont] = ((a * vet[cont]**2)/2) + v0 * vet[cont]
	cont += 1
					 
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:45:45) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade inicial: "))
n = int(input("N: "))

t = array(arange(n))
vet = zeros(len(t))
cont = 0

while(cont < t[-1]):
	vet[cont] = ((a * t[cont]**2)/2) + v0 * t[cont]
	cont += 1
					 
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:47:08) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade inicial: "))
n = int(input("N: "))

t = array(arange(n))
vet = zeros(len(t))
cont = 0

while(cont <= t[-1]):
	vet[cont] = ((a * t[cont]**2)/2) + v0 * t[cont]
	cont += 1
					 
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 15:53:29) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade inicial: "))
n = int(input("N: "))

t = array(arange(n))
vet = zeros(len(t))
cont = 0

while(cont <= t[-1]):
	vet[cont] = ((a * t[cont]**2)/2) + v0 * t[cont]
	cont += 1
					 
print(vet)
-- EXECUTION TIME:
0.581182
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
